added status controller run - ok

--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,13 @@
 		</dependency>
 		<!-- Mongo -->
 
+		<!-- Feign -->
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-openfeign</artifactId>
+		</dependency>
+		<!-- Feign -->
+
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
