--- a/status-api/pom.xml
+++ b/status-api/pom.xml
@@ -11,6 +11,14 @@
 
     <artifactId>status-api</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>ru.example.orders</groupId>
+            <artifactId>orders-core</artifactId>
+            <version>${project.version}</version>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
             <plugin>
