--- a/orders-api/pom.xml
+++ b/orders-api/pom.xml
@@ -12,7 +12,6 @@
     <artifactId>orders-api</artifactId>
 
     <dependencies>
-
         <dependency>
             <groupId>ru.example.orders</groupId>
             <artifactId>orders-core</artifactId>
@@ -28,13 +27,34 @@
                 <version>2.1.3.RELEASE</version>
                 <extensions>true</extensions>
                 <configuration>
-                    <baseClassForTests>ru.example.orders.BaseContractsTest</baseClassForTests>
+                    <baseClassForTests>ru.example.orders.OrdersBaseContractsTest</baseClassForTests>
                     <basePackageForTests>ru.example.orders</basePackageForTests>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>stub</id>
+                        <phase>prepare-package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                        <inherited>false</inherited>
+                        <configuration>
+                            <attach>true</attach>
+                            <descriptors>
+                                ${basedir}/src/assembly/stub.xml
+                            </descriptors>
+                        </configuration>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
